testing/tests/ui/multiple_extends.stderr
error: multiple extend blocks found
 --> MyTemplate4.txt:3:3
  |
       3 | {% extends "foo.html" %}
         |   ^ close to this token
         |
 --> tests/ui/multiple_extends.rs:4:12
  |
4 | #[template(source = r#"
  |            ^^^^^^
